--- a/styles.css
+++ b/styles.css
@@ -362,23 +362,34 @@ template {
 }
 
 
-
-
 body {
   display: grid;
   height: 100vh;
   margin: 0;
 }
 
-h1 {
-  font-size: 28px;
-  padding: 10px;
+img {
+  vertical-align: middle;
+  margin: 3px;
 }
+
+h1 {
+  font-size: 26px;
+  padding: 5px;
+  vertical-align:text-top;
+}
+
 
 li {
   list-style: none;
   margin: 0;
   padding: 0;
+  font-size: 18px;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: start;
+  align-items: center;
+  vertical-align: middle;
 }
 
 ul {
@@ -395,6 +406,7 @@ ul {
   background-color: var(--left-menu-bg);
   color: var(--left-menu-text);
   font-size: 22px;
+  justify-content: center;
 }
 
 .grid-right-side {
