--- a/styles.css
+++ b/styles.css
@@ -355,8 +355,10 @@ template {
 :root {
   --left-menu-bg: #10B981;
   --left-menu-text: #E9FDF7;
-  --card-left-border: #0C855D;
-  --main-window-bg: #79F3CB;
+  --card-left-border: #4dcea3;
+  --card-bg: #FFFFFF;
+  --main-window-bg: #d8eee7;
+  --header-bg: #f5fffc;
   --top-menu-button: #13DF9B;
   font-family: 'Ubuntu', Arial, Verdana, sans-serif;
 }
@@ -409,6 +411,32 @@ ul {
   justify-content: center;
 }
 
+.header-search {
+  display: grid;
+  grid-template-columns: 1fr 5fr 1fr 1fr 2fr;
+  grid-auto-flow: column;
+  align-items: center;
+  vertical-align: middle;
+  justify-content: start;
+}
+
+.header-search img {
+  margin: 0px 10px;
+  border-radius: 50%;
+}
+
+.header-search input {
+  background-color: rgb(202, 199, 199);
+  border: none;
+  border-radius: 10px;
+  box-sizing: border-box;
+  margin: 5px;
+  padding-left: 7px;
+}
+
+
+
+
 .grid-right-side {
   display: grid;
   grid-template-columns: 1fr;
@@ -424,17 +452,17 @@ ul {
 
 }
 
+
 .grid-content-header-top {
-  background-color: rgb(176, 92, 255);
+  background-color: var(--header-bg);
   display: grid;
   grid-template-columns: repeat(auto-fit, 200px);
   justify-content: space-between;
   align-items: center;
-  justify-items: center;
 }
 
 .grid-content-header-bottom {
-  background-color: rgb(172, 151, 192);
+  background-color: var(--header-bg);
   display: grid;
   grid-template-columns: repeat(auto-fit, 200px);
   justify-content: space-between;
@@ -444,7 +472,7 @@ ul {
 
 .grid-content-central {
   display: grid;
-  background-color: coral;
+  background-color: var(--main-window-bg);
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr auto;
 }
@@ -474,12 +502,19 @@ ul {
 
 .card {
   display: grid;
-  background-color: antiquewhite;
-  background-color: gold;
+  background-color: rgb(253, 248, 241);
   height: 200px;
   width: 300px;
   border-left: 4px solid var(--card-left-border);
   border-radius: 6px;
+  font-weight: 500;
+  margin: 15px;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.card p {
+  font-weight: 100;
 }
 
 
@@ -491,7 +526,7 @@ ul {
   grid-template-rows: repeat(auto-fit, 300px);
   align-items: start;
   justify-items: center;
-  background-color: chocolate;
+  background-color: var(--main-window-bg);
   gap: 20px;
 }
 
