--- a/styles.css
+++ b/styles.css
@@ -564,16 +564,25 @@ ul {
 .grid-content-central-side {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: auto auto;
   background-color: var(--main-window-bg);
   gap: 20px;
   margin-left: 20px;
+  justify-content: start;
+  align-items: flex-start;
+  height: fit-content;
 }
 
 .side-wrapper {
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto;
   margin: 0 15px 15px 15px;
+}
+
+.side-wrapper img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
 .side-title {
@@ -596,7 +605,7 @@ ul {
 
 .announcements {
   display: grid;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: 1fr 1fr 1fr;
   padding: 30px 20px 0 20px;
   box-sizing: border-box;
 }
@@ -637,5 +646,31 @@ h4:first-of-type {
 
 .trending {
   display: grid;
-    grid-template-rows: repeat(auto-fill, 200px);
+  grid-template-rows: repeat(auto-fit, 65px);
+  grid-template-columns: minmax(max-content,1fr);
+  font-size: 14px;
+  height: fit-content;
+  align-items: center;
+  justify-items: start;
+}
+
+.trending-wrapper {
+  display: grid;
+  grid-template-columns: 65px 1fr;
+  grid-template-rows: 65px;
+  align-items: center;
+  justify-items: start;
+}
+
+.trending-sub-wrap {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.official-title {
+  width: max-content;
+}
+
+.tag-name {
+  font-weight: 600;
 }
