--- a/styles.css
+++ b/styles.css
@@ -545,6 +545,7 @@ ul {
 
 .card {
   display: grid;
+  grid-template-rows: 30px 1fr 30px;
   background-color: rgb(253, 248, 241);
   height: 200px;
   width: 300px;
@@ -555,10 +556,32 @@ ul {
   padding: 15px;
   box-sizing: border-box;
   box-shadow: 1px 1px 6px 0 rgb(179, 179, 179);
+  position: relative;
+
 }
 
 .card p {
   font-weight: 100;
+}
+
+.card-actions {
+  grid-template-columns: 1fr 1fr 1fr;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.card-actions > ul > li {
+  display: inline;
+}
+
+.card-actions > ul {
+  margin-bottom: 0;
+}
+
+.card-actions button {
+  background-color: inherit;
+  border: none;
 }
 
 .grid-content-central-side {
